tests/src/parser/snapshots/tests__parser__parser_stmts_test__tests__parser_tests@expressions.dan.snap
---
source: tests/src/parser/parser_stmts_test.rs
expression: ast
input_file: tests/src/parser/fixtures/expressions.dan
---
{
  "items": [
    {
      "kind": {
        "Fn": {
          "name": {
            "symbol": {
              "unstable_source": "main"
            },
            "span": {
              "start": 3,
              "end": 7
            }
          },
          "params": "Empty",
          "body": {
            "stmts": [
              {
                "id": 0,
                "kind": {
                  "Local": {
                    "id": 0,
                    "name": {
                      "Ident": [
                        {
                          "symbol": {
                            "unstable_source": "a"
                          },
                          "span": {
                            "start": 20,
                            "end": 21
                          }
                        },
                        {
                          "start": 20,
                          "end": 21
                        }
                      ]
                    },
                    "ty": null,
                    "init": {
                      "kind": {
                        "Lit": {
                          "span": {
                            "start": 24,
                            "end": 25
                          },
                          "kind": {
                            "Number": {
                              "unstable_source": "1"
                            }
                          }
                        }
                      },
                      "span": {
                        "start": 24,
                        "end": 25
                      }
                    },
                    "span": {
                      "start": 16,
                      "end": 25
                    }
                  }
                },
                "span": {
                  "start": 16,
                  "end": 26
                },
                "has_semi": true
              },
              {
                "id": 0,
                "kind": {
                  "Local": {
                    "id": 0,
                    "name": {
                      "Ident": [
                        {
                          "symbol": {
                            "unstable_source": "b"
                          },
                          "span": {
                            "start": 35,
                            "end": 36
                          }
                        },
                        {
                          "start": 35,
                          "end": 36
                        }
                      ]
                    },
                    "ty": null,
                    "init": {
                      "kind": {
                        "Binary": [
                          "Add",
                          {
                            "kind": {
                              "Lit": {
                                "span": {
                                  "start": 39,
                                  "end": 40
                                },
                                "kind": {
                                  "Number": {
                                    "unstable_source": "2"
                                  }
                                }
                              }
                            },
                            "span": {
                              "start": 39,
                              "end": 40
                            }
                          },
                          {
                            "kind": {
                              "Reference": {
                                "symbol": {
                                  "unstable_source": "a"
                                },
                                "span": {
                                  "start": 43,
                                  "end": 44
                                }
                              }
                            },
                            "span": {
                              "start": 43,
                              "end": 44
                            }
                          }
                        ]
                      },
                      "span": {
                        "start": 39,
                        "end": 44
                      }
                    },
                    "span": {
                      "start": 31,
                      "end": 44
                    }
                  }
                },
                "span": {
                  "start": 31,
                  "end": 45
                },
                "has_semi": true
              },
              {
                "id": 0,
                "kind": {
                  "Local": {
                    "id": 0,
                    "name": {
                      "Ident": [
                        {
                          "symbol": {
                            "unstable_source": "c"
                          },
                          "span": {
                            "start": 54,
                            "end": 55
                          }
                        },
                        {
                          "start": 54,
                          "end": 55
                        }
                      ]
                    },
                    "ty": null,
                    "init": {
                      "kind": {
                        "Binary": [
                          "Sub",
                          {
                            "kind": {
                              "Binary": [
                                "Mul",
                                {
                                  "kind": {
                                    "Binary": [
                                      "Div",
                                      {
                                        "kind": {
                                          "Reference": {
                                            "symbol": {
                                              "unstable_source": "a"
                                            },
                                            "span": {
                                              "start": 59,
                                              "end": 60
                                            }
                                          }
                                        },
                                        "span": {
                                          "start": 59,
                                          "end": 60
                                        }
                                      },
                                      {
                                        "kind": {
                                          "Reference": {
                                            "symbol": {
                                              "unstable_source": "b"
                                            },
                                            "span": {
                                              "start": 63,
                                              "end": 64
                                            }
                                          }
                                        },
                                        "span": {
                                          "start": 63,
                                          "end": 64
                                        }
                                      }
                                    ]
                                  },
                                  "span": {
                                    "start": 58,
                                    "end": 65
                                  }
                                },
                                {
                                  "kind": {
                                    "Lit": {
                                      "span": {
                                        "start": 68,
                                        "end": 69
                                      },
                                      "kind": {
                                        "Number": {
                                          "unstable_source": "3"
                                        }
                                      }
                                    }
                                  },
                                  "span": {
                                    "start": 68,
                                    "end": 69
                                  }
                                }
                              ]
                            },
                            "span": {
                              "start": 58,
                              "end": 69
                            }
                          },
                          {
                            "kind": {
                              "Binary": [
                                "Sub",
                                {
                                  "kind": {
                                    "Reference": {
                                      "symbol": {
                                        "unstable_source": "a"
                                      },
                                      "span": {
                                        "start": 73,
                                        "end": 74
                                      }
                                    }
                                  },
                                  "span": {
                                    "start": 73,
                                    "end": 74
                                  }
                                },
                                {
                                  "kind": {
                                    "Reference": {
                                      "symbol": {
                                        "unstable_source": "b"
                                      },
                                      "span": {
                                        "start": 77,
                                        "end": 78
                                      }
                                    }
                                  },
                                  "span": {
                                    "start": 77,
                                    "end": 78
                                  }
                                }
                              ]
                            },
                            "span": {
                              "start": 72,
                              "end": 79
                            }
                          }
                        ]
                      },
                      "span": {
                        "start": 58,
                        "end": 79
                      }
                    },
                    "span": {
                      "start": 50,
                      "end": 79
                    }
                  }
                },
                "span": {
                  "start": 50,
                  "end": 80
                },
                "has_semi": true
              }
            ],
            "id": 0,
            "span": {
              "start": 10,
              "end": 82
            }
          },
          "return_ty": null,
          "is_async": false,
          "generics": null,
          "span": {
            "start": 0,
            "end": 82
          }
        }
      },
      "span": {
        "start": 0,
        "end": 82
      }
    }
  ]
}
