tests/src/parser/snapshots/tests__parser__parser_stmts_test__tests__parser_tests@statements.dan.snap
---
source: tests/src/parser/parser_stmts_test.rs
expression: ast
input_file: tests/src/parser/fixtures/statements.dan
---
{
  "items": [
    {
      "kind": {
        "Fn": {
          "name": {
            "symbol": {
              "unstable_source": "main"
            },
            "span": {
              "start": 3,
              "end": 7
            }
          },
          "params": "Empty",
          "body": {
            "stmts": [
              {
                "id": 0,
                "kind": {
                  "Local": {
                    "id": 0,
                    "name": {
                      "Ident": [
                        {
                          "symbol": {
                            "unstable_source": "a"
                          },
                          "span": {
                            "start": 20,
                            "end": 21
                          }
                        },
                        {
                          "start": 20,
                          "end": 21
                        }
                      ]
                    },
                    "ty": null,
                    "init": {
                      "kind": {
                        "Lit": {
                          "span": {
                            "start": 24,
                            "end": 25
                          },
                          "kind": {
                            "Number": {
                              "unstable_source": "1"
                            }
                          }
                        }
                      },
                      "span": {
                        "start": 24,
                        "end": 25
                      }
                    },
                    "span": {
                      "start": 16,
                      "end": 25
                    }
                  }
                },
                "span": {
                  "start": 16,
                  "end": 26
                },
                "has_semi": true
              },
              {
                "id": 0,
                "kind": {
                  "If": {
                    "span": {
                      "start": 31,
                      "end": 97
                    },
                    "condition": {
                      "kind": {
                        "Lit": {
                          "span": {
                            "start": 34,
                            "end": 38
                          },
                          "kind": {
                            "Bool": {
                              "unstable_source": "true"
                            }
                          }
                        }
                      },
                      "span": {
                        "start": 34,
                        "end": 38
                      }
                    },
                    "block": {
                      "stmts": [
                        {
                          "id": 0,
                          "kind": {
                            "Local": {
                              "id": 0,
                              "name": {
                                "Ident": [
                                  {
                                    "symbol": {
                                      "unstable_source": "b"
                                    },
                                    "span": {
                                      "start": 53,
                                      "end": 54
                                    }
                                  },
                                  {
                                    "start": 53,
                                    "end": 54
                                  }
                                ]
                              },
                              "ty": null,
                              "init": {
                                "kind": {
                                  "Lit": {
                                    "span": {
                                      "start": 57,
                                      "end": 58
                                    },
                                    "kind": {
                                      "Number": {
                                        "unstable_source": "2"
                                      }
                                    }
                                  }
                                },
                                "span": {
                                  "start": 57,
                                  "end": 58
                                }
                              },
                              "span": {
                                "start": 49,
                                "end": 58
                              }
                            }
                          },
                          "span": {
                            "start": 49,
                            "end": 59
                          },
                          "has_semi": true
                        }
                      ],
                      "id": 0,
                      "span": {
                        "start": 39,
                        "end": 65
                      }
                    },
                    "alt": {
                      "Block": {
                        "stmts": [
                          {
                            "id": 0,
                            "kind": {
                              "Local": {
                                "id": 0,
                                "name": {
                                  "Ident": [
                                    {
                                      "symbol": {
                                        "unstable_source": "c"
                                      },
                                      "span": {
                                        "start": 85,
                                        "end": 86
                                      }
                                    },
                                    {
                                      "start": 85,
                                      "end": 86
                                    }
                                  ]
                                },
                                "ty": null,
                                "init": {
                                  "kind": {
                                    "Lit": {
                                      "span": {
                                        "start": 89,
                                        "end": 90
                                      },
                                      "kind": {
                                        "Number": {
                                          "unstable_source": "3"
                                        }
                                      }
                                    }
                                  },
                                  "span": {
                                    "start": 89,
                                    "end": 90
                                  }
                                },
                                "span": {
                                  "start": 81,
                                  "end": 90
                                }
                              }
                            },
                            "span": {
                              "start": 81,
                              "end": 91
                            },
                            "has_semi": true
                          }
                        ],
                        "id": 0,
                        "span": {
                          "start": 71,
                          "end": 97
                        }
                      }
                    }
                  }
                },
                "span": {
                  "start": 31,
                  "end": 97
                },
                "has_semi": false
              }
            ],
            "id": 0,
            "span": {
              "start": 10,
              "end": 99
            }
          },
          "return_ty": null,
          "is_async": false,
          "generics": null,
          "span": {
            "start": 0,
            "end": 99
          }
        }
      },
      "span": {
        "start": 0,
        "end": 99
      }
    }
  ]
}
